<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isRepeat"
            type="Boolean" />

        <variable
            name="isShuffle"
            type="Boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragment.SettingsFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Settings"
            app:titleTextColor="@color/colorTextIcons" />

        <LinearLayout
            android:id="@+id/layoutRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="0"
                android:src="@{isRepeat?@drawable/ic_repeat_one:@drawable/ic_repeat}"
                app:tint="@color/colorTextIcons" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/repeat"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/music_player_will_repeat_a_song_if_enable"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_10ssp" />
            </LinearLayout>

            <Switch
                android:id="@+id/switchRepeat"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_2sdp"
                android:layout_weight="0"
                android:checked="@{isRepeat}"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutShuffle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="0"
                android:src="@drawable/ic_shuffle"
                app:tint="@color/colorTextIcons" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/shuffle"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/the_next_song_will_be_a_random_song"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_10ssp" />
            </LinearLayout>

            <Switch
                android:id="@+id/switchShuffle"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_2sdp"
                android:layout_weight="0"
                android:checked="@{isShuffle}"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutTimer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="0"
                android:src="@drawable/ic_clock"
                app:tint="@color/colorTextIcons" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/timer"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/set_the_time_to_pause_media_player"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_10ssp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>